tests/semantic/rel_udef/rel_udef.err
Error: Undefined relation X in file rel_udef.dl at line 6
R(a) :- X(a).
--------^-----
Error: Not all clauses could be typechecked due to other errors present
2 errors generated, evaluation aborted
